src/components/checkbox/checkbox.scss
@use '../../style/internal/lime-theme';
@use '@material/checkbox';
@use '@material/form-field';

/**
* @prop --checkbox-unchecked-border-color: Affects the border color of the default state of the checkbox (when it is not checked). Defaults to `--contrast-900`.
*/

@mixin custom-checkbox-styles {
    // This is used in other components too, such as `limel-list`
    --mdc-checkbox-checked-color: var(--mdc-theme-primary);
    --mdc-checkbox-unchecked-color: var(
        --checkbox-unchecked-border-color,
        rgb(var(--contrast-900))
    );
    --lime-checkbox-unchecked-color: rgb(var(--contrast-300));
}

:host(limel-checkbox) {
    @include custom-checkbox-styles;
    min-height: 2.5rem;
}

limel-dynamic-label {
    margin-top: 0.375rem;
}

@include checkbox.core-styles;
@include form-field.core-styles;

.mdc-form-field {
    // As long as this component is depended on MDC,
    // we need to force it to be font-agnostic.
    // When MDC-dependency is removed, this block can also be removed.
    // However, on removal of MDC-dependency, we should also make sure to check
    // other font-related styles that might be set by MDC,
    // such as `letter-spacing` or `font-size`.
    font-family: inherit;
}

.mdc-form-field {
    display: flex;
    align-items: flex-start;

    .mdc-checkbox {
        .mdc-checkbox__native-control {
            &[disabled],
            &:enabled {
                &:not(:checked):not(:indeterminate) {
                    ~ .mdc-checkbox__background {
                        background-color: var(--lime-checkbox-unchecked-color);
                    }
                }
            }
        }

        &.mdc-checkbox--invalid {
            .mdc-checkbox__native-control:enabled:not(:checked):not(
                    :indeterminate
                )
                ~ .mdc-checkbox__background {
                border-color: var(--lime-error-text-color);
            }
        }
        .mdc-checkbox__native-control {
            &:focus-visible {
                + .mdc-checkbox__background {
                    &:after {
                        content: '';
                        display: block;
                        position: absolute;
                        inset: -0.25rem;
                        border-radius: 0.25rem;
                        box-shadow: var(--shadow-depth-8-focused);
                    }
                }
            }
        }
    }
    .mdc-checkbox--disabled {
        opacity: 0.5;
    }

    label {
        cursor: pointer;
        line-height: normal;
        letter-spacing: normal;

        padding-top: 0.75rem;
        padding-left: 0;

        &.mdc-checkbox--required::after {
            margin-left: 0.0625rem;
            content: '*';
        }

        &.mdc-checkbox--invalid {
            color: var(--lime-error-text-color);
        }
    }
}

@import './partial-styles/_helper-text.scss';

